// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HeaderLabel Header Label 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-t0zib5-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1vtvfmb-MuiTypography-root"
      >
        name
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-dcx4qa-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-l0k1rq-MuiTypography-root"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label/HeaderLabel Header Label Tool Tip 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-t0zib5-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1vtvfmb-MuiTypography-root"
      >
        name
      </p>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-64uahr-MuiContainer-root"
      >
        <span />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-dcx4qa-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-l0k1rq-MuiTypography-root"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;
